Add initial version of multiselect widget

--- a/src/components/EditorWidgets/EditorWidgets.css
+++ b/src/components/EditorWidgets/EditorWidgets.css
@@ -3,6 +3,7 @@
 @import "./withMedia/withMedia.css";
 @import "./Image/Image.css";
 @import "./File/FileControl.css";
+@import "./MultiSelect/MultiSelect.css";
 @import "./Markdown/Markdown.css";
 @import "./Boolean/Boolean.css";
 @import "./Relation/Relation.css";
